# vscode-remote-server-project

./: .gitignore  README.md  docker-compose.yml  remotefs.init  remotefs.service
.github/workflows/: daemon-ci.yml  extension-ci.yml  main.yml  release.yml
daemon/: Dockerfile  pyproject.toml  requirements.txt
daemon/app/: main.py
daemon/app/filesystem/: cache.py  operations.py  watcher.py
daemon/app/git/: operations.py  watcher.py
daemon/app/rpc/: protocol.py
daemon/app/search/: ripgrep.py
daemon/app/terminal/: pty.py
daemon/tests/: test_main.py
extension/: esbuild.js  package-lock.json  package.json  tsconfig.json
extension/src/: extension.ts  logger.ts
extension/src/filesystem/: connection.ts  provider.ts  staleCheck.ts
extension/src/filesystem/adapters/: filesystemAdapter.ts  localAdapter.ts  remoteAdapter.ts
extension/src/filesystem/routing/: featureFlags.ts  operationMode.ts  operationRouter.ts  parseRemoteFSUri.ts  parsedRemoteFSUri.ts
extension/src/rpc/: client.ts
extension/src/scm/: gitProvider.ts
extension/src/search/: fileSearchProvider.ts  textSearchProvider.ts
extension/src/terminal/: remoteTerminal.ts
extension/src/test/suite/: extension.test.ts  index.ts
