[project]
name = "remotefs-daemon"
version = "0.1.0"
description = "Remote filesystem daemon for VS Code"
authors = [
    { name = "Nauman Ahmed" }
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "pydantic",
    "aiofiles",
    "watchdog"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
